--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,10 @@
 #admin-page {
   padding-top: 0px; }
 
+.dropdown-user {
+  height: auto; }
+
+textarea {
+  resize: vertical; }
+
 /*# sourceMappingURL=app.css.map */
